# rigflow

./: .gitignore  Cargo.toml  DISCLAIMER.md  LICENSE  README.md
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
desktop-client/: Cargo.toml
desktop-client/src/: main.rs
docs/: RELEASE_NOTES.md  installation.md  operator-guide.md  signal-path.md  troubleshooting.md  validation.md
radio-core/: Cargo.toml
radio-core/src/audio/: jitter_buffer.rs  mod.rs
radio-protocol/: Cargo.toml
radio-protocol/src/: lib.rs
radio-server/: Cargo.toml
radio-server/src/: #main.rs#  main.rs
radio-server/src/api/: protocol.rs  websocket.rs
radio-server/src/dsp/: iq_buffer.rs  pipeline.rs
radio-server/src/events/: bus.rs
radio-server/src/plugin_api/: traits.rs
radio-server/src/plugins/: ft8_decoder.rs
reference/: ARRL_Band_Plan.csv  Radio_Bands.csv
rigflow-client/: Cargo.toml
rigflow-client/src/: #eframe_app.rs#  alsa_quiet.rs  audio_metrics.rs  audio_recorder.rs  client_runtime.rs  cw_decode.rs  cw_text.rs  digital_audio.rs  digital_rx.rs  digital_tx.rs  eframe_app.rs  legacy_minifb.rs  main.rs  mic.rs  rigctl_server.rs  sidetone.rs  spectrum_view.rs  tci_server.rs  voice_keyer.rs
rigflow-client/src/app/: actions.rs  bands.rs  frequency_view.rs  layout.rs  mod.rs  om_bands.rs  spectrum_utils.rs  state.rs  stats.rs  title.rs  ui_action.rs  waterfall.rs
rigflow-client/src/input/: keyboard.rs  mod.rs  mouse.rs
rigflow-client/src/logging/: capture.rs  export.rs  lifecycle.rs  mod.rs  wsjtx_listener.rs
rigflow-client/src/net/: control.rs  mod.rs  udp.rs  websocket.rs
rigflow-client/src/persistence/: bootstrap.rs  error.rs  migrations.rs  mod.rs  models.rs  paths.rs  store.rs
rigflow-client/src/render/: bands.rs  color.rs  control_panel.rs  frame.rs  left_panel.rs  mod.rs  om_band.rs  spectrum.rs  spectrum_utils.rs  text.rs  waterfall.rs
rigflow-client/src/render/widgets/: button.rs  collapsible.rs  mod.rs  text_input.rs  types.rs
rigflow-client/src/ui/: #app_actions.rs#  app.rs  app_actions.rs  app_audio.rs  app_center.rs  app_dialogs.rs  app_export.rs  app_filter.rs  app_import.rs  app_logging.rs  app_panels.rs  app_swr_sweep.rs  app_wsjtx_setup.rs  bands.rs  freq_limits.rs  frequency_view.rs  layout.rs  mod.rs  om_bands.rs  spectrum_utils.rs  spectrum_view.rs  state.rs  stats.rs  tuning_steps.rs  utils.rs  view_interaction.rs  waterfall.rs
rigflow-client/src/ui/panels/: bookmarks.rs  latency.rs  mod.rs  operator.rs  problems.rs  radio_control.rs  radios.rs  sections.rs  server.rs  source_control.rs  source_status.rs  station.rs  tx_tune_test.rs  vfo.rs  waterfall_control.rs
rigflow-client/src/widgets/: frequency_widget.rs  lo_frequency_widget.rs  mod.rs
rigflow-core/: Cargo.toml
rigflow-core/src/: lib.rs
rigflow-core/src/audio/: jitter_buffer.rs
rigflow-core/src/dsp/: demod.rs  mod.rs  modes.rs
rigflow-core/src/net/: mod.rs  udp_framing.rs
rigflow-core/src/radio/: amplifier.rs  ham_band.rs  iq_recording.rs  mod.rs  model.rs  source_control.rs  source_status.rs  swr_sweep.rs  tx_audio_diag.rs  tx_tune.rs  types.rs  vfo.rs
rigflow-log/: Cargo.toml
rigflow-log/src/: adif.rs  capture.rs  dedupe.rs  display.rs  error.rs  import.rs  lib.rs  migrations.rs  model.rs  normalize.rs  schema.rs  store.rs  wsjtx.rs
rigflow-log/src/export/: filter.rs  mod.rs  query.rs  tests.rs  writer.rs
rigflow-log/src/import/: tests.rs
rigflow-probe/: Cargo.toml
rigflow-probe/src/: args.rs  main.rs  stats.rs
rigflow-protocol/: Cargo.toml
rigflow-protocol/src/: lib.rs  radio_control.rs  radio_controls.rs
rigflow-server/: Cargo.toml
rigflow-server/src/: app_state.rs  config.rs  lib.rs  main.rs  tx_diag.rs
rigflow-server/src/amplifier/: hr50.rs  mod.rs  serial.rs  transport.rs
rigflow-server/src/api/: websocket.rs
rigflow-server/src/audio_output/: playback.rs
rigflow-server/src/dsp/: decimator.rs  mod.rs  pipeline.rs  smeter.rs  tuner.rs
rigflow-server/src/dsp/audio/: agc.rs  audio_fir.rs  dc_blocker.rs  deemphasis.rs  mod.rs  noise_blanker.rs  notch.rs  nr2.rs  resampler.rs  speech_compressor.rs  tx_limiter.rs
rigflow-server/src/dsp/demod/: am.rs  cw.rs  fm.rs  mod.rs  ssb.rs
rigflow-server/src/events/: event.rs
rigflow-server/src/input/: iq_wav_reader.rs
rigflow-server/src/net/: mod.rs  websocket.rs
rigflow-server/src/net/udp/: mic_audio.rs  mod.rs  udp_audio.rs  udp_registration.rs  udp_waterfall.rs
rigflow-server/src/plugins/: ft8_decoder.rs  mod.rs
rigflow-server/src/radio/: api.rs  discovery.rs  hl2_discovery.rs  manager.rs  mod.rs  types.rs  worker.rs
rigflow-server/src/recording/: iq_recorder.rs  mod.rs
rigflow-server/src/server/: #radio_worker.rs#  app_state.rs  config.rs  control.rs  discovery.rs  mod.rs  pipeline_factory.rs  radio_api.rs  radio_manager.rs  radio_protocol.rs  radio_types.rs  radio_worker.rs  session.rs  workers.rs
rigflow-server/src/source/: factory.rs  fake.rs  hermeslite2.rs  mod.rs  rtlsdr.rs  wav.rs  wav_metadata.rs
rigflow-server/src/streaming/: mod.rs  udp_audio.rs  udp_registration.rs  udp_waterfall.rs
rigflow-server/src/waterfall/: generator.rs  simple.rs
rigflow-server/tests/: discovery_tests.rs  radio_manager_async_tests.rs  radio_manager_tests.rs
src/: lib.rs  main.rs
src/api/: protocol.rs  websocket.rs
src/audio_client/: jitter_buffer.rs
src/audio_output/: mod.rs  wav_writer.rs
src/dsp/: decimator.rs  fft.rs  filter.rs  iq_buffer.rs  mod.rs  pipeline.rs  tuner.rs
src/dsp/demod/: cw.rs  (+3 more)
src/events/: bus.rs  event.rs  mod.rs
src/input/: iq_wav_reader.rs  mod.rs
src/plugin_api/: traits.rs
src/plugins/: ft8_decoder.rs  mod.rs
src/server/: app_state.rs  mod.rs
src/source/: factory.rs  fake_iq.rs  mod.rs  rtlsdr.rs
src/streaming/: audio_binary.rs  audio_stream.rs  mod.rs  udp_audio.rs  udp_registration.rs
src/waterfall/: generator.rs  mod.rs  simple.rs
(+21 files in other folders)
