[package]
name = "radio-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rustfft = "6.4.1"
tokio = { version = "1", features = ["full"] }
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5"
cpal = "0.15"
axum = { version = "0.7", features = ["ws"] }
futures = "0.3"
tokio-stream = "0.1"
minifb = "0.27"

[profile.release]
debug = true
