[package]
name = "rigflow-client"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.15"
futures-util = "0.3"
minifb = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = "0.24"
rigflow-protocol = { path = "../rigflow-protocol" }
rigflow-core = { path = "../rigflow-core" }