[package]
name = "rigflow-client"
version.workspace = true
edition = "2024"
description = "Rigflow SDR desktop client (egui)"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_plot = "0.31"
log = "0.4"
env_logger = "0.11"
cpal = "0.15"
hound = "3.5"
futures-util = "0.3"
minifb = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "signal"] }
tokio-tungstenite = "0.24"
rigflow-protocol = { path = "../rigflow-protocol" }
rigflow-core = { path = "../rigflow-core" }
