[package]
name = "rigflow-log"
version.workspace = true
edition = "2024"
description = "Rigflow contact (QSO) logging: SQLite store, ADIF, WSJT-X ingest, split-frequency capture"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
