[package]
name = "rigflow-protocol"
version.workspace = true
edition = "2024"
description = "Rigflow client/server WebSocket protocol types"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rigflow-core = { path = "../rigflow-core" }